// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useResponsive should response to window width changes 1`] = `
Object {
  "responsive": Object {
    "lg": true,
    "md": true,
    "sm": true,
    "xl": false,
    "xs": true,
    "xxl": false,
  },
  "screen": "lg",
}
`;

exports[`useResponsive should response to window width changes 2`] = `
Object {
  "responsive": Object {
    "lg": false,
    "md": false,
    "sm": false,
    "xl": false,
    "xs": true,
    "xxl": false,
  },
  "screen": "xs",
}
`;

exports[`useResponsive should response to window width changes 3`] = `
Object {
  "responsive": Object {
    "lg": false,
    "md": false,
    "sm": true,
    "xl": false,
    "xs": true,
    "xxl": false,
  },
  "screen": "sm",
}
`;

exports[`useResponsive should response to window width changes 4`] = `
Object {
  "responsive": Object {
    "lg": false,
    "md": true,
    "sm": true,
    "xl": false,
    "xs": true,
    "xxl": false,
  },
  "screen": "md",
}
`;

exports[`useResponsive should response to window width changes 5`] = `
Object {
  "responsive": Object {
    "lg": true,
    "md": true,
    "sm": true,
    "xl": false,
    "xs": true,
    "xxl": false,
  },
  "screen": "lg",
}
`;

exports[`useResponsive should response to window width changes 6`] = `
Object {
  "responsive": Object {
    "lg": true,
    "md": true,
    "sm": true,
    "xl": true,
    "xs": true,
    "xxl": false,
  },
  "screen": "xl",
}
`;

exports[`useResponsive should response to window width changes 7`] = `
Object {
  "responsive": Object {
    "lg": true,
    "md": true,
    "sm": true,
    "xl": true,
    "xs": true,
    "xxl": true,
  },
  "screen": "xxl",
}
`;
